# ggsegpy

./: .gitignore  LICENSE  README.md  README.qmd  pyproject.toml
.github/: agents.md
.github/workflows/: docs.yml  release.yml  render-readme.yml  test.yml
docs/: _brand.yml  _quarto.yml  getting-started.qmd  index.qmd  styles.scss
docs/_scripts/: sync-brand.py
docs/examples/: 2d_visualization.qmd  3d_visualization.qmd  atlas_manipulation.qmd  custom_data.qmd
docs/reference/: index.qmd
scripts/: export_brain_meshes.R
src/ggsegpy/: __init__.py  atlas.py  atlas_utils.py  data.py  geom_brain.py  join.py  palettes.py  plot3d.py  position_brain.py  registry.py  themes.py  validation.py
src/ggsegpy/atlases/: __init__.py
src/ggsegpy/atlases/data/: aseg.parquet  aseg_2d.parquet  aseg_core.parquet  brain_meshes.parquet  dk.parquet  dk_2d.parquet  dk_3d.parquet  dk_core.parquet  fsaverage5.parquet  tracula.parquet  tracula_2d.parquet  tracula_3d.parquet  tracula_core.parquet
tests/: conftest.py  test_atlas.py  test_atlas_utils.py  test_geom_brain.py  test_join.py  test_plot3d.py  test_position_brain.py
